Phase 1: Security & Stability - Complete refactor
BREAKING CHANGES:
- Replaced direct file upload with presigned URL architecture
- Separated authentication flows (anon vs service role keys)
- Added token refresh middleware (60min → auto-refresh)

Security Fixes:
✅ RAM upload bomb eliminated (presigned URLs)
✅ Service role key exposure eliminated (admin-only operations)
✅ File validation via magic numbers
✅ Filename sanitization for storage compatibility
✅ Rate limiting: 5 signups/hour, 10 uploads/hour, 30 logins/hour
✅ Email confirmation flow integrated

Backend:
- app.py: Complete rewrite (631 lines)
- requirements.txt: Added flask-limiter, flask-talisman, python-magic
- Database schema with RLS policies, triggers, functions

Frontend:
- Presigned upload with progress bar
- Fixed endpoint references across templates
- Created 404 error page

Documentation:
- docs/CHANGELOG.md: Detailed change log
- database/setup.sql: Complete schema setup
- .env.example: Updated template
- .gitignore: Comprehensive exclusions

Tested & Working:
✅ Signup/login with email confirmation
✅ Token refresh (>30min sessions)
✅ Song upload with presigned URLs
✅ Audio playback with stream counting
✅ Admin dashboard
✅ Profile page

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,17 @@
-# This is a template of your environment variables file (.env) 
+# Generate with: python -c 'import secrets; print(secrets.token_hex(32))'
+SECRET_KEY=
 
-SECRET_KEY=your_secret_key_goes_here
+# From Supabase Dashboard: Settings → API → Project URL
+SUPABASE_URL=
 
-SUPABASE_URL=your_superbase_url_goes_here
+# From Supabase Dashboard: Settings → API → Project API keys → anon public
+SUPABASE_KEY=
 
-SUPABASE_KEY=your_sperbase_key_goes_here
+# From Supabase Dashboard: Settings → API → Project API keys → service_role (Keep secret!)
+SUPABASE_SERVICE_KEY=
 
-SUPABASE_SERVICE_KEY=your_superbase_service_key_goes_here
+# Your admin email address
+ADMIN_EMAIL=
+
+# Optional: Set to 'development' for debug mode
+FLASK_ENV=development
